# hindsight

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  NOTICE.txt  README.md  conanfile.py
docs/: CMakeLists.txt  cppreference-doxygen-web.tag.xml
examples/: CMakeLists.txt  print_stacktrace_here.cpp
examples/out_of_process/: CMakeLists.txt  common.hpp  out_of_process_host.cpp  out_of_process_watchdog.cpp
extras/exceptions/: exceptions.hpp  exceptions_msvc.cpp  msvc_eh_test.cpp
include/: CMakeLists.txt
include/hindsight/: capture.hpp  config.hpp  resolver.hpp  simple.hpp  stacktrace.hpp  stacktrace_entry.hpp
include/hindsight/detail/: bstr.hpp  config.hpp
src/: CMakeLists.txt  capture.test.cpp  capture_signal.test.cpp  capture_unix.cpp  capture_windows.cpp  resolver.test.cpp  resolver_backtrace.cpp  resolver_libdw.cpp  resolver_windows.cpp  resolver_windows_impl.hpp  simple.cpp  stacktrace.cpp  stacktrace_entry.cpp  stacktrace_entry.test.cpp  stacktrace_unix.cpp  stacktrace_windows.cpp
src/detail/: bstr.cpp
src/itanium_abi/: demangle.cpp  demangle.hpp
src/unix/: encoding.cpp  encoding.hpp  encoding.test.cpp
src/util/: finally.cpp  finally.hpp  locked.cpp  locked.hpp  locked.test.cpp
src/windows/: com.cpp  com.hpp  encoding.cpp  encoding.hpp  module_info.cpp  module_info.hpp  module_map.cpp  module_map.hpp
tests/: CMakeLists.txt  main.cpp
tools/cmake/: FindDIA.cmake  Findelfutils.cmake  clang_tidy.cmake  coverage.cmake  default_options.cmake
